<resources>
    <string name="app_name">sfcontrol</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="cold_door_warn">冷藏门开启报警！</string>
    <!--通用-->
    <string name="return_title">返回</string>
    <!--冰箱状态-->
    <string name="status_code_title">状态码</string>
    <string name="env_temp_title">环境温度</string>
    <string name="env_hum_title">环境湿度</string>
    <string name="fridge_temp_title">冷藏室温度</string>
    <string name="freeze_temp_title">冷冻室温度</string>
    <string name="change_temp_title">变温室温度</string>


    <!--后台测试界面-->
    <string name="title_fridge_model">冰箱型号</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="title_status_code">状态码</string>
    <string name="title_env_temp">环境温度</string>
    <string name="title_env_hum">环境湿度</string>
    <string name="title_fridge_room">冷藏室</string>
    <string name="title_freeze_room">冷冻室</string>
    <string name="title_change_room">变温室</string>
    <string name="title_fridge_temp">冷藏温度</string>
    <string name="title_freeze_temp">冷冻温度</string>
    <string name="title_change_temp">变温温度</string>

    <!--工厂测试界面-->
    <string name="rbt_factory_version">版本号</string>
    <string name="rbt_factory_reset">恢复出厂</string>
    <string name="rbt_factory_status">器件状态</string>
    <string name="rbt_factory_camera">摄像头</string>
    <string name="rbt_factory_TP">TP校准</string>
    <string name="rbt_factory_audio">音频测试</string>
    <string name="rbt_factory_market">商场演示</string>
    <string name="rbt_factory_debug">冰箱调试</string>

    <string name="title_factory_tft_version">彩屏显示程序版本号</string>
    <string name="title_factory_os_version">主控板程序版本号</string>
    <string name="title_factory_mac">MAC地址</string>
    <string name="title_factory_reset">重要提醒！\n恢复出厂设置后，您的网络信息，本地账户信息将被清空，是否确认回复？</string>
    <string name="btn_factory_reset">确认</string>
    <string name="title_factory_sensor">温度传感器</string>
    <string name="title_factory_env_temp">环境温度</string>
    <string name="title_factory_env_hum">环境湿度</string>
    <string name="title_factory_fridge">冷藏室传感器</string>
    <string name="title_factory_freeze">冷冻室传感器</string>
    <string name="title_factory_change">变温室传感器</string>
    <string name="title_factory_defrost_sensor">化霜传感器</string>
    <string name="text_factory_normal">正常</string>

    <string name="text_factory_error">ERROR</string>
    <string name="title_factory_status">状态</string>
    <string name="title_factory_fridge_door">冷藏室门</string>
    <string name="title_factory_freeze_door">冷冻室门</string>
    <string name="title_factory_change_door">变温室门</string>
    <string name="title_factory_inside_door">门中门</string>
    <string name="title_factory_fridge_left_door">左冷藏室门</string>
    <string name="title_factory_fridge_right_door">右冷藏室门</string>
    <string name="title_factory_communication">通信状态</string>
    <string name="title_factory_pir">人感状态</string>
    <string name="text_factory_has_person">有人</string>
    <string name="text_factory_no_person">没人</string>
    <string name="title_factory_wifi">WIFI强度</string>
    <string name="text_door_open">开</string>
    <string name="text_door_close">关</string>
    <string name="text_factory_tp_start">TP正在校准中\n请勿触碰屏幕!</string>
    <string name="text_factory_tp_ok">"0xf 0xf\n校准成功"</string>
    <string name="text_factory_tp_faild">"校准失败"</string>

    <string name="pop_default_content">内容</string>
    <string name="pop_default_title">提示</string>
    <string name="pop_default_hint">请输入恢复出厂设置密码</string>

    <string name="title_factory_fridge_real_temp">冷藏实际温度</string>
    <string name="title_factory_freeze_real_temp">冷冻实际温度</string>
    <string name="title_factory_change_real_temp">变温实际温度</string>
    <string name="title_factory_env_real_temp">环境实际温度</string>
    <string name="title_factory_fridge_defrost_real_temp">冷藏化霜实际温度</string>
    <string name="title_factory_freeze_defrost_real_temp">冷冻化霜实际温度</string>
    <string name="title_factory_change_defrost_real_temp">变温化霜实际温度</string>
    <string name="title_factory_dry_area_real_temp">干区实际温度</string>

    <string name="title_factory_fridge_fan_voltage">冷藏风机电压</string>
    <string name="title_factory_freeze_fan_voltage">冷冻风机电压</string>
    <string name="title_factory_change_fan_voltage">变温风机电压</string>
    <string name="title_factory_cold_fan_voltage">冷却风机电压</string>
    <string name="title_factory_press_one_freq">压机1频率</string>
    <string name="title_factory_fridge_air_door">冷藏室风门</string>
    <string name="title_factory_change_air_door">变温室风门</string>
    <string name="title_factory_air_door">风门</string>
    <string name="title_factory_air_door_valve">风门阀门</string>
    <string name="title_factory_defrost_heater">化霜加热丝</string>
    <string name="title_factory_fridge_heater">冷藏室加热丝</string>
    <string name="title_factory_freeze_heater">冷冻室加热丝</string>
    <string name="title_factory_change_heater">变温室加热丝</string>
    <string name="title_factory_air_door_heater">风门加热丝</string>
    <string name="title_factory_door_border_heater">门边框加热丝</string>
    <string name="title_factory_verticalBridge_heater">竖梁加热丝</string>
    <string name="title_factory_fridge_top_light">冷藏顶灯</string>
    <string name="title_factory_fridge_back_light">冷藏背灯</string>
    <string name="title_factory_fridge_light">冷藏背灯</string>
    <string name="title_factory_freeze_light">冷冻灯</string>
    <string name="title_factory_change_light">变温灯</string>
    <string name="title_factory_handle_light">把手灯</string>
    <string name="title_factory_test_mode">T 模式</string>
    <string name="txt_btn_camera_mipi">主摄像头</string>
    <string name="text_factory_mipi_camera">主摄像头</string>
    <string name="text_factory_mipi_camera_none">主摄像头 未连接</string>
    <string name="text_factory_mipi_camera_broken">主摄像头 故障</string>
    <string name="text_factory_usb_camera">USB摄像头</string>
    <string name="text_factory_usb_camera_none">USB摄像头 未连接</string>
    <string name="text_factory_usb1_camera">USB摄像头1</string>
    <string name="text_factory_usb2_camera">USB摄像头2</string>
    <string name="text_factory_usb3_camera">USB摄像头3</string>
    <string name="text_factory_usb4_camera">USB摄像头4</string>
    <string name="text_factory_usb5_camera">USB摄像头5</string>

    <string name="title_factory_fridge_defrost_sensor">冷藏化霜传感器</string>
    <string name="title_factory_freeze_defrost_sensor">冷冻化霜传感器</string>
    <string name="title_factory_change_defrost_sensor">变温化霜传感器</string>

    <string name="title_factory_fridge_defrost">冷藏化霜</string>
    <string name="title_factory_freeze_defrost">冷冻化霜</string>
    <string name="title_factory_change_defrost">变温化霜</string>

    <string name="title_factory_fridge_fan">冷藏风机</string>
    <string name="title_factory_freeze_fan">冷冻风机</string>
    <string name="title_factory_change_fan">变温风机</string>
    <string name="title_factory_cold_fan">冷却风机</string>

    <string name="title_factory_dry_sensor">干区传感器</string>

    <string name="txt_tft_rfid_attention">验证前提条件:\n往冷藏室、冷冻室分别放入一个或一个以上RFID标签！</string>
    <string name="txt_tft_btn_rfid_verify">验证</string>
    <string name="txt_tft_rfid_result">RFID验证结果：</string>
    <string name="txt_tft_rfid_connect">RFID连接状态：</string>
    <string name="txt_tft_rfid_antenna_1">RFID天线1状态：</string>
    <string name="txt_tft_rfid_antenna_2">RFID天线2状态：</string>
    <string name="txt_tft_rfid_antenna_3">RFID天线3状态：</string>

</resources>
