<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/linear_activity_debug"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/tab_margin"
              android:orientation="vertical">
    <!--标题-->
    <LinearLayout
        android:id="@+id/linear_debug_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_debug_fridge_model"
            android:layout_width="@dimen/auto_width"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_debug_fridge_model"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_fridge_model"
                android:textSize="@dimen/text_size_40"/>

            <TextView
                android:id="@+id/text_debug_fridge_model"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/tab_margin"
                android:textSize="@dimen/text_size_40"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_debug_return"
            android:layout_width="@dimen/auto_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_debug_return"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/return_title"
                android:textSize="@dimen/text_size_40"/>

        </LinearLayout>

    </LinearLayout>
    <!--状态码显示-->
    <LinearLayout
        android:id="@+id/linear_debug_status_code"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/linear_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_debug_status_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_status_code"
            android:textSize="@dimen/text_size_32"/>

        <TextView
            android:id="@+id/text_debug_status_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tab_margin"
            android:textSize="@dimen/text_size_32"/>
    </LinearLayout>
    <!--主体显示-->
    <LinearLayout
        android:id="@+id/linear_debug_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/linear_layout"
        android:orientation="horizontal">
        <!--状态显示-->
        <LinearLayout
            android:id="@+id/linear_debug_status"
            android:layout_width="@dimen/auto_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/linear_layout"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">
            <!--环境温度-->
            <LinearLayout
                android:id="@+id/linear_debug_env_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_debug_env_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_env_temp"
                    android:textSize="@dimen/text_size_32"/>

                <TextView
                    android:id="@+id/text_debug_env_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_margin"
                    android:textSize="@dimen/text_size_32"/>
            </LinearLayout>
            <!--环境湿度-->
            <LinearLayout
                android:id="@+id/linear_debug_env_hum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_debug_env_thum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_env_hum"
                    android:textSize="@dimen/text_size_32"/>

                <TextView
                    android:id="@+id/text_debug_env_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_margin"
                    android:textSize="@dimen/text_size_32"/>
            </LinearLayout>
            <!--冷藏温度-->
            <LinearLayout
                android:id="@+id/linear_debug_fridge_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_debug_fridge_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_fridge_temp"
                    android:textSize="@dimen/text_size_32"/>

                <TextView
                    android:id="@+id/text_debug_fridge_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_margin"
                    android:textSize="@dimen/text_size_32"/>
            </LinearLayout>
            <!--冷冻温度-->
            <LinearLayout
                android:id="@+id/linear_debug_freeze_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_debug_freeze_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_freeze_temp"
                    android:textSize="@dimen/text_size_32"/>

                <TextView
                    android:id="@+id/text_debug_freeze_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_margin"
                    android:textSize="@dimen/text_size_32"/>
            </LinearLayout>
            <!--变温温度-->
            <LinearLayout
                android:id="@+id/linear_debug_change_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_debug_change_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_change_temp"
                    android:textSize="@dimen/text_size_32"/>

                <TextView
                    android:id="@+id/text_debug_change_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_margin"
                    android:textSize="@dimen/text_size_32"/>
            </LinearLayout>


        </LinearLayout>
        <!--控制显示-->
        <LinearLayout
            android:id="@+id/linear_debug_mode"
            android:layout_width="@dimen/auto_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_weight="3"
            android:background="@drawable/linear_layout"
            android:orientation="horizontal">
            <!--档位控制-->
            <LinearLayout
                android:id="@+id/linear_debug_temp_gear"
                android:layout_width="@dimen/auto_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <!--冷藏室档位-->
                <LinearLayout
                    android:id="@+id/linear_debug_skb_fridge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/fab_margin"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_debug_fridge_room"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_fridge_room"
                            android:textSize="@dimen/text_size_32"/>

                        <TextView
                            android:id="@+id/text_debug_fridge_target"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/tab_margin"
                            android:text="5℃"
                            android:textSize="@dimen/text_size_32"/>
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/skb_debug_fridge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tab_margin"
                        />
                </LinearLayout>
                <!--冷冻室档位-->
                <LinearLayout
                    android:id="@+id/linear_debug_skb_freeze"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@color/gray2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/fab_margin"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_debug_freeze_room"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_freeze_room"
                            android:textSize="@dimen/text_size_32"/>

                        <TextView
                            android:id="@+id/text_debug_freeze_target"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/tab_margin"
                            android:text="-18℃"
                            android:textSize="@dimen/text_size_32"/>
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/skb_debug_freeze"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tab_margin"/>
                </LinearLayout>
                <!--变温室档位-->
                <LinearLayout
                    android:id="@+id/linear_debug_skb_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@color/gray2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/fab_margin"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_debug_change_room"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_change_room"
                            android:textSize="@dimen/text_size_32"/>

                        <TextView
                            android:id="@+id/text_debug_change_target"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/tab_margin"
                            android:text="-1℃"
                            android:textSize="@dimen/text_size_32"/>
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/skb_debug_change"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tab_margin"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_debug_mode_button"
                android:layout_width="@dimen/auto_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
